# SideTrack

./: .dockerignore  .env.example  .env.test  .eslintrc.cjs  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  Makefile  README.md  Sidetrack Club Reboot.md  compose.min.yml  compose.pro.yml  compose.yml  conftest.py  forms.md  noxfile.py  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  tsconfig.base.json
.github/workflows/: ci.yml
agents/: analysis.md  api.md  bot.md  core.md  data-model.md  sidetrack_discord_bot_agent_instructions.md  sidetrack_mvp_music_apis_agent_instructions.md  web.md  worker.md
agents/frontend_example/: README.md  next-env.d.ts  package.json  tailwind.config.mjs  tsconfig.json
agents/frontend_example/app/: globals.css  layout.tsx  page.tsx
agents/frontend_example/components/: Navbar.tsx  (+3 more)
apps/: __init__.py
apps/api/: Dockerfile  README.md  config.py  db.py  entrypoint.sh  main.py
apps/bot/: Dockerfile  README.md  package.json
apps/web/: Dockerfile  README.md  package.json  tailwind.config.js  tsconfig.json
apps/worker/: Dockerfile  README.md  package.json
config/: ENVIRONMENT.md
data/: sample_listens.json
deploy/: Caddyfile
docs/: api-endpoints.md  forms.md  legacy-mapping.md  package-management.md  ui.md
migrations/: env.py
migrations/versions/: 0001_canonical_initial.py  0f4b5a53bdc4_add_rating_metadata_and_nomination.py  1cdd5f4b8e41_add_spotify_id_to_track.py  2b6f8c1d7e90_add_token_and_role_to_user_account.py  3e1c1f4e3d90_pgvector_enable.py  4f5b2a1c9d9b_streamline_constraints_and_indexes.py  5d6e1a2b3c4d_add_feature_provenance.py  6b1f90e2b8c7_add_spotify_columns_to_user_settings.py  7ab1c2d3e4f5_add_user_settings.py  7b8f0ad4e3ab_add_linked_account_columns.py  7e0e2f720f2b_insight_events.py  9c6a1e7c1d9b_add_dataset_version.py  a1b2c3d4e5f6_add_user_account.py  b4d9e6a8c7f2_add_track_tables_and_views.py  c71e3c2f6a4b_core_reboot_tables.py  d90118d52e4b_add_phase2_tables.py  e64c65df3bdf_social_tables_and_legacy_backfill.py  ef830516179b_initial.py
scripts/: bench_extractor.py  bench_extractor_baseline.json  migrate_legacy.py
services/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 20240904_000001_initial.py  20250905_000002_streamline.py
services/api/app/: config.py  constants.py  db.py  main.py  models.py  scoring.py  security.py  utils.py
services/api/app/api/: __init__.py
services/api/app/api/v1/: auth.py  dashboard.py  listens.py  musicbrainz.py
services/api/app/clients/: lastfm.py  listenbrainz.py
services/api/app/model_data/: logreg_v1.json
services/api/app/repositories/: artist_repository.py  listen_repository.py  release_repository.py  track_repository.py
services/api/app/routes/: auth.py  dashboard.py  listens.py  musicbrainz.py
services/api/app/schemas/: listens.py  musicbrainz.py  tracks.py
services/api/app/services/: listen_service.py
services/api/tests/: test_analyze_batch.py  test_analyze_track.py  test_auth_tokens.py  test_labels.py  test_listen_service.py  test_multiuser.py  test_musicbrainz_ingest.py  test_outliers.py  test_recent_listens.py  test_redis_connection.py  test_score_batch.py  test_scoring.py  test_spotify_features.py  test_spotify_listens.py  test_track_features.py
services/base/: Dockerfile
services/common/: models.py
services/db/: Dockerfile
services/extractor/: Dockerfile  requirements.txt
services/jobrunner/: Dockerfile  test_jobrunner.py
services/scheduler/: Dockerfile  requirements.txt  test_scheduler.py
services/tests/: conftest.py
services/ui/: .eslintrc.cjs  Dockerfile  jest.config.js  jest.setup.ts  middleware.test.ts  middleware.ts  nav.json  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  types.d.ts
services/worker/: Dockerfile  pyproject.toml
services/worker/tests/: conftest.py  test_jobs.py
services/worker/worker/: config.py  jobs.py  run.py
sidetrack/: __init__.py  __main__.py  cli.py  config.py  profile.py  scoring.py
sidetrack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sidetrack/analytics/: tags.py
sidetrack/api/: config.py  db.py  main.py  scoring.py  security.py  utils.py
sidetrack/common/: config.py  logging.py  models.py  telemetry.py
sidetrack/config/: extraction.py  scoring.py
sidetrack/db/: __init__.py  utils.py
sidetrack/enrichment/: __init__.py  fusion.py  lastfm.py  listenbrainz.py  mb.py  spotify.py
sidetrack/extraction/: __init__.py  __main__.py  cli.py  dsp.py  embeddings.py  features.py  io.py  pipeline.py  scoring.py  stems.py
sidetrack/extractor/: run.py
sidetrack/ingest/: __init__.py  lastfm.py  spotify.py
sidetrack/jobrunner/: config.py  run.py
sidetrack/scheduler/: config.py  run.py
sidetrack/services/: __init__.py  base_client.py  candidates.py  datasync.py  ingestion.py  insights.py  lastfm.py  listenbrainz.py  listens.py  maintenance.py  mb.py  mb_map.py  models.py  musicbrainz.py  ranker.py  recommendation.py  spotify.py
sidetrack/worker/: __init__.py  config.py  jobs.py  run.py
tests/: README.md  conftest.py  test_axes_scoring.py  test_bench_extractor.py  test_excerpt_audio.py  test_extraction_pipeline.py  test_lastfm_adapter.py  test_lastfm_client.py  test_mb_map.py  test_mb_service.py  test_profile.py  test_spotify.py  test_stems.py
tests/api/: test_auth.py  test_cohorts.py  test_dashboard.py  test_daypart.py  test_enrich_ids.py  test_health.py  test_insights_endpoint.py  test_ops_queue.py  test_ops_schedules.py  test_ready.py  test_recs_lb_cf.py  test_recs_ranked.py  test_user_labels.py
tests/factories/: README.md  __init__.py
tests/services/: test_candidates.py  test_datasync.py  test_insights.py  test_listen_service_benchmark.py  test_listen_service_converters.py  test_listenbrainz.py  test_listenbrainz_provider.py  test_maintenance.py  test_recommendation_profile.py  test_spotify.py  test_spotify_provider.py
(+341 files in other folders)
