[project]
name = "sidetrack"
version = "0.1.0"
description = "Multi-service SideTrack application"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sidetrack*"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "^migrations/versions/"

[tool.isort]
profile = "black"
line_length = 100
filter_files = true
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations/versions/"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort import order
  "UP", # pyupgrade
]
ignore = [
  "E501",  # let black handle line length
]

[tool.ruff.lint.per-file-ignores]
"migrations/env.py" = ["E402"]
"services/api/alembic/env.py" = ["E402"]
"services/api/app/main.py" = ["E402"]
"services/api/tests/test_scoring.py" = ["E402"]
"sidetrack/api/main.py" = ["E402"]
"services/tests/conftest.py" = ["E402"]
"tests/factories/__init__.py" = ["E402"]

[tool.pytest.ini_options]
markers = [
    "unit: fast-running tests that mock external services",
    "integration: tests that require external services",
]
