[project]
name = "sidetrack"
version = "0.1.0"
description = "Multi-service SideTrack application"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "python-dotenv==1.0.1",
    "psycopg[binary]==3.2.1",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "SQLAlchemy==2.0.32",
    "pgvector==0.3.5",
    "requests==2.32.3",
    "httpx==0.27.0",
    "typer==0.12.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]

api = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.1",
    "tenacity==8.2.3",
    "passlib[bcrypt]==1.7.4",
    "redis==5.0.7",
    "rq==1.16.2",
    "google-auth==2.40.3",
    "pytest-asyncio==0.23.7",
    "fastapi-limiter==0.1.6",
]

extraction = [
    "numpy==1.26.4",
    "scipy==1.13.1",
    "librosa==0.10.2.post1",
    "soundfile==0.12.1",
    "openl3==0.4.2",
    "croniter==1.4.1",
]

jobrunner = [
    "schedule==1.2.2",
]

worker = [
    "fastapi==0.111.1",
    "rq==1.16.2",
    "redis==5.0.7",
    "librosa==0.10.2.post1",
    "numpy==1.26.4",
    "soundfile==0.12.1",
    "fakeredis==2.23.2",
]

dev = [
    "pytest==7.4.4",
    "pytest-cov==5.0.0",
    "testcontainers[postgres,redis]==4.7.1",
    "factory-boy==3.3.0",
    "pre-commit==3.7.0",
    "docker==7.1.0",
    "freezegun==1.5.1",
    "pytest-socket==0.7.0",
    "syrupy==4.6.0",
    "respx==0.20.2",
]

[tool.setuptools.packages.find]
include = ["sidetrack*"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "^migrations/versions/"

[tool.isort]
profile = "black"
line_length = 100
filter_files = true
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations/versions/"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort import order
  "UP", # pyupgrade
]
ignore = [
  "E501",  # let black handle line length
]

[tool.ruff.lint.per-file-ignores]
"migrations/env.py" = ["E402"]
"services/api/app/main.py" = ["E402"]
"services/api/tests/test_scoring.py" = ["E402"]
"sidetrack/api/main.py" = ["E402"]
"services/tests/conftest.py" = ["E402"]
"tests/factories/__init__.py" = ["E402"]

[tool.pytest.ini_options]
markers = [
    "unit: fast-running tests that mock external services",
    "integration: tests that require external services",
]
