[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sidetrack-worker"
version = "0.1.0"
dependencies = [
    "sidetrack-api",
    "rq==1.16.2",
    "redis==5.0.7",
    "librosa",
    "numpy",
    "soundfile",
    "fakeredis",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]
